--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,32 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
+    implementation 'org.testng:testng:7.7.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 
+    implementation group: 'org.apache.poi', name: 'poi-ooxml-schemas', version: '4.1.2'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
+    implementation group: 'org.apache.poi', name: 'poi', version: '4.1.2'
+    implementation group: 'com.aventstack', name: 'extentreports', version: '5.0.9'
+}
+def hasSuite = project.hasProperty("suite")
+def hasSuitePath = project.hasProperty("suitepath")
 test {
-    useJUnitPlatform()
+    useTestNG()
+    useTestNG() {
+        dependsOn cleanTest
+        useDefaultListeners = true
+
+        if (hasSuite) {
+            def suiteName = project.property('suite')
+            suites "src/test/resources/${suiteName}"
+        }
+
+        if (hasSuitePath) {
+            def suitepath = project.property("suitepath")
+            suites "${suitepath}"
+        }
+    }
 }
